fix popup on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,9 +22,6 @@
 
 .popuplayout{
   display: flex;
-  width: 480px;
-  height: 935px;
- 
   padding: 30px;
   flex-direction: column;
   align-items: center;
@@ -33,7 +30,6 @@
 
 }
   .popupstyle {
-
     background: rgba(0, 71, 255, 0.70);
     box-shadow: 2px 20px 47px 15px rgba(0, 0, 0, 0.22);
     backdrop-filter: blur(10px);
